[package]
name = "fsw"
version = "0.1.1"
authors = ["Jason Longshore <hello@jasonlongshore.com>"]
edition = "2021"
keywords = ["command", "runner", "tool", "watch", "directory"]
license = "Apache-2.0"
repository = "https://github.com/longshorej/fsw"
homepage = "https://github.com/longshorej/fsw"
description = "A tool to watch a directory and run a command when its contents change."
readme = "README.md"

[dependencies]
notify = "4.0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
